# Primeiro_Projeto_FASTAPI

./: .gitignore  pyproject.toml
fast_zero/: app.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 094e30c4ac15_create_users_table.py  c9e20477bef4_adicionando_updated_at_na_tabela_users.py
tests/: conftest.py  test_app.py  test_db.py
